--- a/EmpireRUI/Views/MainMenuView.xaml
+++ b/EmpireRUI/Views/MainMenuView.xaml
@@ -9,7 +9,8 @@
              d:DesignHeight="450" d:DesignWidth="800"
              Background="LightSeaGreen"
                         >
-    <w:AutoGrid>
-        <Button Content="New Game"  />
+    <w:AutoGrid Rows="Auto, Auto">
+        <Button Content="New Game" Margin="6" />
+        <Button Content="Mini map" Grid.Row="1" Margin="6"/> 
     </w:AutoGrid>
 </local:MainMenuViewBase>
