--- a/EmpireRUI/Views/MainMenuView.xaml
+++ b/EmpireRUI/Views/MainMenuView.xaml
@@ -11,7 +11,7 @@
                         PreviewMouseLeftButtonDown="MainMenuViewBase_PreviewMouseLeftButtonDown"
                         >
     <w:AutoGrid Rows="Auto, Auto,*">
-        <Button Content="New Game" Margin="6" />
+        <Button Content="New Game" Margin="6" x:Name="newGame" />
         <Button Content="Mini map" Grid.Row="1" Margin="6"/>
         <Canvas Grid.Row="2" x:Name="canvas" PreviewKeyDown="canvas_KeyDown" Background="Transparent" PreviewMouseLeftButtonDown="canvas_PreviewMouseLeftButtonDown" >
         </Canvas>
