--- a/EmpireRUI/Views/MapView.xaml
+++ b/EmpireRUI/Views/MapView.xaml
@@ -7,7 +7,7 @@
              xmlns:w="clr-namespace:AutoGrid;assembly=AutoGrid"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <w:AutoGrid Rows="Auto,Auto">
+    <w:AutoGrid Rows="Auto,Auto, Auto, Auto">
 
         <TextBox x:Name="tbMap" 
                  Grid.Row="0"
@@ -21,5 +21,8 @@
                         
                         TextWrapping="Wrap"
                     />
+        <Button Content="go right" Grid.Row="2" Click="Button_Click" />
+        <Button Content="go downright" Grid.Row="3" Click="Button_Click_1" />
+        <Button Content="go downright" Grid.Row="3" Click="Button_Click_2" />
     </w:AutoGrid>
 </local:MapViewBase>
