--- a/EmpireRUI/Views/MapView.xaml
+++ b/EmpireRUI/Views/MapView.xaml
@@ -35,5 +35,6 @@
         <Button Content="open production window for a city with lowest production"
                 Grid.Row="7" Click="Button_Click_6" />
         <Button Content="home city production" Grid.Row="8" Click="Button_Click_7" />
+        <Button Content="load" Grid.Row="9" Click="Button_Click_8" />
     </w:AutoGrid>
 </local:MapViewBase>
